src/components/notifications/AppExplorer/AppCard/AppCard.scss
.AppCard {
  padding: 2rem;
  border-radius: 1.875em;
  position: relative;
  text-decoration: none;
  height: fit-content;
  outline: 1px solid rgba(0, 0, 0, 0.1);
  overflow: hidden;

  @media only screen and (max-width: 700px) {
    border-radius: 0.75rem;
    padding: 1rem;
  }

  // Blur out the image from the top left, ending to 75% of the width/height of the image
  &__background {
    z-index: -2;
    position: absolute;
    border-radius: 1.875em;
    background-repeat: no-repeat;
    background-position: 0% 0%;
    background-size: 75%;
    opacity: 50%;
    filter: blur(120px);
    overflow: hide;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }

  &__mobile__button__subscribe {
    &:disabled {
      background-color: var(--accent-color-1) !important;

      .Spinner {
        circle {
          stroke: white;
        }
      }
    }
  }

  &__mobile__button__subscribed,
  &__mobile__button__subscribe {
    min-width: 84px;
    height: 28px;
    @media only screen and (min-width: 700px) {
      display: none;
    }
  }

  &__header {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;

    @media only screen and (max-width: 700px) {
      align-items: center;
    }
    &__logo {
      border-radius: 50%;
      width: 3.75em;
      height: 3.75em;
      margin-bottom: 0.75em;
      border: 1px solid rgba(0, 0, 0, 0.1);

      @media only screen and (max-width: 700px) {
        width: 3rem;
        height: 3rem;
        margin-bottom: 0px;
      }
    }
    &__link-icon {
      width: 0.67em;
      height: 0.67em;
    }
  }

  &__body {
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    color: var(--fg-color-1);

    @media only screen and (max-width: 700px) {
      margin-top: 0.75rem;
    }

    &__title {
      display: flex;
      align-items: center;
      gap: 0.3125rem;

      @media only screen and (max-width: 700px) {
        span {
          font-size: 16px;
          font-style: normal;
          font-weight: 600;
          line-height: 130%;
          letter-spacing: -0.48px;
        }
      }

      svg {
        width: 1.125rem;

        @media only screen and (max-width: 700px) {
          width: 1rem;
        }
      }
    }

    &__subtitle {
      color: var(--fg-color-2);
      line-height: 16px;
      letter-spacing: -0.24px;
      margin-top: 2px;
    }

    &__description {
      color: var(--fg-color-1);
      margin-top: 1rem;

      @media only screen and (max-width: 700px) {
        margin-top: 0.75rem;
        font-size: 14px;
        font-style: normal;
        font-weight: 400;
        line-height: 130%; /* 18.2px */
        letter-spacing: -0.14px;
        color: #474d4d;
      }
    }

    &__subscribe {
      @media only screen and (max-width: 700px) {
        display: none;
      }

      &:disabled {
        background-color: var(--accent-color-1) !important;

        .Spinner {
          circle {
            stroke: white;
          }
        }
      }

      min-width: 84px;
      width: max-content;
      margin-top: 1.5rem;
      cursor: pointer;
      height: 28px;
    }

    &__subscribed {
      @media only screen and (max-width: 700px) {
        display: none;
      }

      min-width: 84px;
      width: max-content;
      margin-top: 1.5rem;
      cursor: pointer;
      height: 28px;
    }
  }
}

